--- a/index.html
+++ b/index.html
@@ -1,53 +1,49 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>StormTracker 13 TrackingNQSevereWeather Real Time Radar</title>
+  <title>StormTracker 13 - TrackingNQSevereWeather</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
   <style>
-    html, body { margin: 0; padding: 0; height: 100%; }
-    #map { width: 100%; height: 100%; }
-    .leaflet-control-layers-expanded {
-      max-height: 150px;
-      overflow-y: auto;
+    html, body, #map {
+      height: 100%;
+      margin: 0;
+      padding: 0;
     }
   </style>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
   <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://api.windy.com/assets/map-forecast/libBoot.js"></script>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script>
-    const options = {
-      key: 'EtkxaOhkZomn18gCqf3WgTxX6gi867Br', // Your Windy API key
-      lat: 39.8283, // Center of the USA
-      lon: -98.5795,
-      zoom: 4,
-      verbose: true,
-      overlay: 'radar',
-      timestamp: Date.now()
-    };
+    const map = L.map('map').setView([39.5, -98.35], 4); // Center on USA
 
-    windyInit(options, windyAPI => {
-      const { map } = windyAPI;
-      L.control.layers(
-        {
-          "Reflectivity": L.tileLayer(
-            'https://tilecache.rainviewer.com/v2/radar/{z}/{x}/{y}/5/1_1.png', 
-            { attribution: "RainViewer", opacity: 0.7 }
-          ).addTo(map),
-          "Velocity": L.tileLayer(
-            'https://tilecache.rainviewer.com/v2/radar/{z}/{x}/{y}/5/2_1.png',
-            { attribution: "RainViewer", opacity: 0.7 }
-          )
-        },
-        null,
-        { collapsed: false }
-      ).addTo(map);
-    });
+    // Add OpenStreetMap basemap
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '© OpenStreetMap contributors'
+    }).addTo(map);
+
+    // Add Reflectivity Layer (RainViewer)
+    const reflectivityLayer = L.tileLayer(
+      'https://tilecache.rainviewer.com/v2/radar/nowcast/{z}/{x}/{y}/5/1_1.png',
+      { opacity: 0.6, attribution: "Radar © RainViewer" }
+    ).addTo(map);
+
+    // Add Velocity Layer Toggle
+    const velocityLayer = L.tileLayer(
+      'https://tilecache.rainviewer.com/v2/radar/nowcast/{z}/{x}/{y}/5/2_1.png',
+      { opacity: 0.6, attribution: "Radar © RainViewer" }
+    );
+
+    // Layer control
+    L.control.layers(
+      { "Reflectivity": reflectivityLayer, "Velocity": velocityLayer },
+      null,
+      { collapsed: false }
+    ).addTo(map);
   </script>
 </body>
 </html>
+
