--- a/index.html
+++ b/index.html
@@ -2,47 +2,83 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>StormTracker 13 - TrackingNQSevereWeather</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>StormTracker 13 - TrackingNQSevereWeather Real Time Radar</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
   <style>
-    html, body, #map {
+    html, body {
       height: 100%;
       margin: 0;
-      padding: 0;
+    }
+    #map {
+      height: 100vh;
+      width: 100vw;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-  <script>
-    const map = L.map('map').setView([39.5, -98.35], 4); // Center on USA
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet-ajax/dist/leaflet.ajax.min.js"></script>
 
-    // Add OpenStreetMap basemap
+  <script>
+    const map = L.map('map').setView([39.5, -98.35], 5);
+
+    // Base layer
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '© OpenStreetMap contributors'
+      attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    // Add Reflectivity Layer (RainViewer)
-    const reflectivityLayer = L.tileLayer(
-      'https://tilecache.rainviewer.com/v2/radar/nowcast/{z}/{x}/{y}/5/1_1.png',
-      { opacity: 0.6, attribution: "Radar © RainViewer" }
-    ).addTo(map);
+    // Reflectivity
+    const reflectivity = L.tileLayer('https://tilecache.rainviewer.com/v2/radar/0/{z}/{x}/{y}/5/1_1.png', {
+      opacity: 0.6,
+      attribution: 'Radar data © RainViewer'
+    }).addTo(map);
 
-    // Add Velocity Layer Toggle
-    const velocityLayer = L.tileLayer(
-      'https://tilecache.rainviewer.com/v2/radar/nowcast/{z}/{x}/{y}/5/2_1.png',
-      { opacity: 0.6, attribution: "Radar © RainViewer" }
-    );
+    // Satellite
+    const satellite = L.tileLayer('https://tilecache.rainviewer.com/v2/satellite/0/{z}/{x}/{y}/5/1_1.png', {
+      opacity: 0.4,
+      attribution: 'Satellite imagery © RainViewer'
+    });
 
-    // Layer control
-    L.control.layers(
-      { "Reflectivity": reflectivityLayer, "Velocity": velocityLayer },
-      null,
-      { collapsed: false }
-    ).addTo(map);
+    // Lightning
+    const lightning = L.tileLayer('https://tiles.lightningmaps.org/static/tiles/1.0.0/lightning/{z}/{x}/{y}.png', {
+      attribution: 'Lightning data © Blitzortung.org',
+      opacity: 0.8
+    });
+
+    // US Weather Alerts from NWS
+    const alerts = new L.GeoJSON.AJAX("https://api.weather.gov/alerts/active?status=actual&message_type=alert", {
+      style: function (feature) {
+        let color = "orange";
+        const event = feature.properties.event.toLowerCase();
+
+        if (event.includes("tornado")) color = "red";
+        else if (event.includes("thunderstorm")) color = "blue";
+        else if (event.includes("flood")) color = "green";
+        else if (event.includes("fire")) color = "darkred";
+        else if (event.includes("wind")) color = "purple";
+
+        return { color: color, weight: 2, fillOpacity: 0.3 };
+      },
+      onEachFeature: function (feature, layer) {
+        const props = feature.properties;
+        const content = `<strong>${props.event}</strong><br>${props.headline}<br><em>${props.areaDesc}</em><br>${props.description}`;
+        layer.bindPopup(content);
+      }
+    });
+
+    alerts.addTo(map);
+
+    const overlays = {
+      "Reflectivity": reflectivity,
+      "Satellite": satellite,
+      "Lightning": lightning,
+      "NWS Alerts": alerts
+    };
+
+    L.control.layers(null, overlays, { collapsed: false }).addTo(map);
   </script>
 </body>
 </html>
