--- a/index.html
+++ b/index.html
@@ -3,82 +3,81 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StormTracker 13 - TrackingNQSevereWeather Real Time Radar</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
+  <title>StormTracker 13 TrackingNQSevereWeather Real Time Radar</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    html, body {
+    html, body, #map {
       height: 100%;
       margin: 0;
-    }
-    #map {
-      height: 100vh;
-      width: 100vw;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/leaflet-ajax/dist/leaflet.ajax.min.js"></script>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
   <script>
-    const map = L.map('map').setView([39.5, -98.35], 5);
+    const map = L.map('map').setView([39.5, -98.35], 5); // Center on USA
 
-    // Base layer
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    // Base map
+    const base = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 18,
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    // Reflectivity
-    const reflectivity = L.tileLayer('https://tilecache.rainviewer.com/v2/radar/0/{z}/{x}/{y}/5/1_1.png', {
+    // Reflectivity Radar (Iowa State)
+    const radar = L.tileLayer('https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/nexrad-n0q-900913/{z}/{x}/{y}.png', {
       opacity: 0.6,
-      attribution: 'Radar data © RainViewer'
+      attribution: 'Radar © Iowa State Univ. IEM'
     }).addTo(map);
 
-    // Satellite
-    const satellite = L.tileLayer('https://tilecache.rainviewer.com/v2/satellite/0/{z}/{x}/{y}/5/1_1.png', {
-      opacity: 0.4,
-      attribution: 'Satellite imagery © RainViewer'
+    // ⚡️ Lightning overlay (optional — demo only, no live data)
+    const lightning = L.circle([38, -97], {
+      radius: 50000,
+      color: 'yellow',
+      fillColor: 'yellow',
+      fillOpacity: 0.7
+    }).bindPopup("⚡️ Lightning Strike Example");
+
+    // 🛰 Satellite (GOES — demo, static)
+    const satellite = L.tileLayer('https://services.arcgisonline.com/arcgis/rest/services/World_Imagery/MapServer/tile/{z}/{x}/{y}', {
+      attribution: "Esri World Imagery"
     });
 
-    // Lightning
-    const lightning = L.tileLayer('https://tiles.lightningmaps.org/static/tiles/1.0.0/lightning/{z}/{x}/{y}.png', {
-      attribution: 'Lightning data © Blitzortung.org',
-      opacity: 0.8
-    });
+    // 🌪 NWS Alerts (USA)
+    fetch('https://api.weather.gov/alerts/active')
+      .then(response => response.json())
+      .then(data => {
+        data.features.forEach(alert => {
+          const coords = alert.geometry?.coordinates;
+          if (coords) {
+            const poly = L.polygon(coords[0].map(pair => [pair[1], pair[0]]), {
+              color: getAlertColor(alert.properties.event),
+              fillOpacity: 0.4
+            }).bindPopup(`<b>${alert.properties.event}</b><br>${alert.properties.headline}`);
+            poly.addTo(map);
+          }
+        });
+      });
 
-    // US Weather Alerts from NWS
-    const alerts = new L.GeoJSON.AJAX("https://api.weather.gov/alerts/active?status=actual&message_type=alert", {
-      style: function (feature) {
-        let color = "orange";
-        const event = feature.properties.event.toLowerCase();
+    function getAlertColor(event) {
+      const e = event.toLowerCase();
+      if (e.includes("tornado")) return "red";
+      if (e.includes("thunderstorm")) return "blue";
+      if (e.includes("flood")) return "green";
+      if (e.includes("fire")) return "darkred";
+      if (e.includes("wind")) return "purple";
+      return "orange";
+    }
 
-        if (event.includes("tornado")) color = "red";
-        else if (event.includes("thunderstorm")) color = "blue";
-        else if (event.includes("flood")) color = "green";
-        else if (event.includes("fire")) color = "darkred";
-        else if (event.includes("wind")) color = "purple";
-
-        return { color: color, weight: 2, fillOpacity: 0.3 };
-      },
-      onEachFeature: function (feature, layer) {
-        const props = feature.properties;
-        const content = `<strong>${props.event}</strong><br>${props.headline}<br><em>${props.areaDesc}</em><br>${props.description}`;
-        layer.bindPopup(content);
-      }
-    });
-
-    alerts.addTo(map);
-
+    // Add optional overlays
     const overlays = {
-      "Reflectivity": reflectivity,
-      "Satellite": satellite,
-      "Lightning": lightning,
-      "NWS Alerts": alerts
+      "Reflectivity Radar": radar,
+      "Satellite (Static)": satellite,
+      "Lightning (Example)": lightning
     };
-
-    L.control.layers(null, overlays, { collapsed: false }).addTo(map);
+    L.control.layers(null, overlays).addTo(map);
   </script>
 </body>
 </html>
