--- a/index.html
+++ b/index.html
@@ -5,80 +5,69 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>StormTracker 13 TrackingNQSevereWeather Real Time Radar</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-timedimension/dist/leaflet.timedimension.control.min.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet-timedimension/dist/leaflet.timedimension.min.js"></script>
   <style>
     html, body, #map {
       height: 100%;
       margin: 0;
+      padding: 0;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
-
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-
   <script>
-    const map = L.map('map').setView([39.5, -98.35], 5); // Center on USA
-
-    // Base map
-    const base = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 18,
-      attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
-
-    // Reflectivity Radar (Iowa State)
-    const radar = L.tileLayer('https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/nexrad-n0q-900913/{z}/{x}/{y}.png', {
-      opacity: 0.6,
-      attribution: 'Radar © Iowa State Univ. IEM'
-    }).addTo(map);
-
-    // ⚡️ Lightning overlay (optional — demo only, no live data)
-    const lightning = L.circle([38, -97], {
-      radius: 50000,
-      color: 'yellow',
-      fillColor: 'yellow',
-      fillOpacity: 0.7
-    }).bindPopup("⚡️ Lightning Strike Example");
-
-    // 🛰 Satellite (GOES — demo, static)
-    const satellite = L.tileLayer('https://services.arcgisonline.com/arcgis/rest/services/World_Imagery/MapServer/tile/{z}/{x}/{y}', {
-      attribution: "Esri World Imagery"
+    const map = L.map("map", {
+      center: [39.8283, -98.5795], // Centered on USA
+      zoom: 5,
+      timeDimension: true,
+      timeDimensionControl: true,
+      timeDimensionOptions: {
+        timeInterval: "PT3H/PT0H",
+        period: "PT5M"
+      }
     });
 
-    // 🌪 NWS Alerts (USA)
-    fetch('https://api.weather.gov/alerts/active')
-      .then(response => response.json())
-      .then(data => {
-        data.features.forEach(alert => {
-          const coords = alert.geometry?.coordinates;
-          if (coords) {
-            const poly = L.polygon(coords[0].map(pair => [pair[1], pair[0]]), {
-              color: getAlertColor(alert.properties.event),
-              fillOpacity: 0.4
-            }).bindPopup(`<b>${alert.properties.event}</b><br>${alert.properties.headline}`);
-            poly.addTo(map);
-          }
-        });
-      });
+    const baseLayer = L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      maxZoom: 18,
+      attribution: '© OpenStreetMap contributors'
+    }).addTo(map);
 
-    function getAlertColor(event) {
-      const e = event.toLowerCase();
-      if (e.includes("tornado")) return "red";
-      if (e.includes("thunderstorm")) return "blue";
-      if (e.includes("flood")) return "green";
-      if (e.includes("fire")) return "darkred";
-      if (e.includes("wind")) return "purple";
-      return "orange";
-    }
+    const radarLayer = L.tileLayer("https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/nexrad-n0q-900913/{z}/{x}/{y}.png", {
+      opacity: 0.6,
+      attribution: "Radar © Iowa State Univ. IEM"
+    });
 
-    // Add optional overlays
+    const satelliteLayer = L.tileLayer("https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/goes-vis-900913/{z}/{x}/{y}.png", {
+      opacity: 0.6,
+      attribution: "Satellite © Iowa State Univ. IEM"
+    });
+
+    const lightningLayer = L.tileLayer("https://www.lightningmaps.org/staticmap/lightningmap-{z}/{x}/{y}.png", {
+      opacity: 0.7,
+      attribution: "Lightning © Blitzortung.org"
+    });
+
     const overlays = {
-      "Reflectivity Radar": radar,
-      "Satellite (Static)": satellite,
-      "Lightning (Example)": lightning
+      "Radar": radarLayer,
+      "Satellite": satelliteLayer,
+      "Lightning": lightningLayer
     };
+
     L.control.layers(null, overlays).addTo(map);
+    radarLayer.addTo(map);
+
+    // Auto-refresh layers every 5 minutes
+    setInterval(() => {
+      const timestamp = new Date().getTime();
+      radarLayer.setUrl(radarLayer._url + "?_=" + timestamp);
+      satelliteLayer.setUrl(satelliteLayer._url + "?_=" + timestamp);
+      lightningLayer.setUrl(lightningLayer._url + "?_=" + timestamp);
+    }, 300000);
   </script>
 </body>
 </html>
+
 
