--- a/index.html
+++ b/index.html
@@ -1,146 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>StormTracker 13 | TrackingNQSevereWeather Real Time Radar</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    html, body, #map {
-      height: 100%;
-      margin: 0;
-      padding: 0;
+    #map {
+      width: 100%;
+      height: 100vh;
     }
-
-    .leaflet-control-layers-expanded {
-      max-height: 200px;
-      overflow-y: auto;
-    }
-
-    .slider-container {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(255,255,255,0.8);
-      padding: 5px 10px;
-      border-radius: 10px;
-    }
-
-    .slider-container input {
-      width: 300px;
-    }
-
-    @media (max-width: 600px) {
-      .slider-container input {
-        width: 200px;
-      }
+    .leaflet-control-layers {
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
-  <div class="slider-container">
-    <input type="range" id="timeSlider" min="0" max="5" step="1" value="0">
-  </div>
 
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet-timedimension/dist/leaflet.timedimension.min.js"></script>
+  <script src="https://unpkg.com/leaflet-velocity/dist/leaflet-velocity.min.js"></script>
 
   <script>
-    const map = L.map("map").setView([39.5, -98.35], 4);
+    const map = L.map("map", {
+      center: [39.5, -98.35], // Center USA
+      zoom: 5,
+      timeDimension: true,
+      timeDimensionControl: true,
+      timeDimensionOptions: {
+        timeInterval: "PT3H/PT0H",
+        period: "PT5M"
+      }
+    });
 
-    // Base Map
-    const base = L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-      attribution: "&copy; OpenStreetMap contributors"
+    // Base layer
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      attribution: "© OpenStreetMap contributors"
     }).addTo(map);
 
-    // Radar Reflectivity (Iowa State)
-    let radarFrames = [];
-    for (let i = 0; i <= 5; i++) {
-      radarFrames.push(
-        L.tileLayer(`https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/nexrad-n0q-{timestamp}/{z}/{x}/{y}.png`, {
-          attribution: "Radar &copy; Iowa State",
-          transparent: true
-        })
-      );
+    // Radar layer (Reflectivity from Iowa State)
+    const radarLayer = L.tileLayer("https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/ridge::N0Q::USCOMP/{z}/{x}/{y}.png", {
+      attribution: "Iowa State Mesonet",
+      transparent: true
+    }).addTo(map);
+
+    // Satellite placeholder
+    const satelliteLayer = L.tileLayer("https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/goes16-vis-usa/{z}/{x}/{y}.png", {
+      attribution: "Satellite via Iowa State",
+      transparent: true
+    });
+
+    // Simulated lightning layer
+    const lightningLayer = L.tileLayer("https://tile.openweathermap.org/map/lightning_new/{z}/{x}/{y}.png?appid=YOUR_API_KEY", {
+      attribution: "Lightning data © OpenWeather",
+      transparent: true
+    });
+
+    // Weather Warnings from NWS
+    async function loadWarnings() {
+      const res = await fetch("https://api.weather.gov/alerts/active");
+      const data = await res.json();
+
+      const warningsLayer = L.geoJSON(data, {
+        style: (feature) => {
+          const type = feature.properties.event;
+          let color = "#FF0000";
+          if (type.includes("Tornado")) color = "#FF0000";
+          else if (type.includes("Severe Thunderstorm")) color = "#FFA500";
+          else if (type.includes("Flash Flood")) color = "#006400";
+          else if (type.includes("Flood")) color = "#00FF00";
+          else if (type.includes("Marine")) color = "#800080";
+          else if (type.includes("Winter Storm")) color = "#1E90FF";
+          else if (type.includes("Hurricane")) color = "#8B0000";
+
+          return {
+            color: color,
+            weight: 2,
+            fillOpacity: 0.3
+          };
+        },
+        onEachFeature: (feature, layer) => {
+          layer.bindPopup(`<strong>${feature.properties.event}</strong><br>${feature.properties.headline}`);
+        }
+      });
+
+      warningsLayer.addTo(map);
     }
+    loadWarnings();
 
-    // Update with real timestamps
-    const timestamps = [];
-    const now = new Date();
-    for (let i = 0; i <= 5; i++) {
-      const time = new Date(now.getTime() - i * 5 * 60000); // 5 min steps
-      const str = time.toISOString().replace(/[-:]/g, "").slice(0, 12);
-      timestamps.unshift(str);
-    }
-
-    radarFrames = timestamps.map(ts =>
-      L.tileLayer(`https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/nexrad-n0q-${ts}/{z}/{x}/{y}.png`, {
-        transparent: true,
-        attribution: "Iowa State Radar"
-      })
-    );
-
-    let currentRadar = radarFrames[radarFrames.length - 1].addTo(map);
-
-    document.getElementById("timeSlider").addEventListener("input", function () {
-      map.removeLayer(currentRadar);
-      currentRadar = radarFrames[this.value];
-      currentRadar.addTo(map);
-    });
-
-    // Satellite layer (GOES via NOAA)
-    const satellite = L.tileLayer('https://cdn.star.nesdis.noaa.gov/GOES16/ABI/CONUS/GEOCOLOR/{z}/{x}/{y}.jpg', {
-      attribution: 'Satellite &copy; NOAA',
-      maxZoom: 7
-    });
-
-    // Warnings (NWS GeoJSON feed)
-    const warnings = L.geoJSON(null, {
-      style: feature => ({
-        color: 'red',
-        weight: 2,
-        fillOpacity: 0.3
-      }),
-      onEachFeature: (feature, layer) => {
-        const props = feature.properties;
-        layer.bindPopup(`<strong>${props.event}</strong><br>${props.headline || ''}`);
-      }
-    });
-
-    fetch("https://api.weather.gov/alerts/active?status=actual&message_type=alert")
-      .then(res => res.json())
-      .then(data => warnings.addData(data.features));
-
-    map.addLayer(warnings);
-
-    const overlays = {
-      "Radar Reflectivity": currentRadar,
-      "Satellite": satellite,
-      "NWS Warnings": warnings
+    // Layer control
+    const baseLayers = {
+      "OpenStreetMap": map
     };
 
-    L.control.layers({ "Base Map": base }, overlays).addTo(map);
+    const overlays = {
+      "Radar (Reflectivity)": radarLayer,
+      "Satellite": satelliteLayer,
+      "Lightning": lightningLayer
+    };
 
-    // Auto-refresh radar every 5 minutes
+    L.control.layers(baseLayers, overlays).addTo(map);
+
+    // Auto-refresh radar layer every 5 minutes
     setInterval(() => {
-      const newTimestamps = [];
-      const newNow = new Date();
-      for (let i = 0; i <= 5; i++) {
-        const t = new Date(newNow.getTime() - i * 5 * 60000);
-        newTimestamps.unshift(t.toISOString().replace(/[-:]/g, "").slice(0, 12));
-      }
-
-      radarFrames = newTimestamps.map(ts =>
-        L.tileLayer(`https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/nexrad-n0q-${ts}/{z}/{x}/{y}.png`, {
-          transparent: true
-        })
-      );
-
-      document.getElementById("timeSlider").max = radarFrames.length - 1;
-      map.removeLayer(currentRadar);
-      currentRadar = radarFrames[radarFrames.length - 1].addTo(map);
-    }, 300000); // 5 minutes
+      radarLayer.setUrl("https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/ridge::N0Q::USCOMP/{z}/{x}/{y}.png?" + new Date().getTime());
+      loadWarnings(); // refresh warnings too
+    }, 5 * 60 * 1000);
   </script>
 </body>
 </html>
+
