--- a/index.html
+++ b/index.html
@@ -11,91 +11,143 @@
       margin: 0;
       padding: 0;
     }
+    .leaflet-top.leaflet-left {
+      z-index: 9999;
+    }
+    .button-container {
+      background: rgba(0,0,0,0.7);
+      padding: 10px;
+      border-radius: 8px;
+    }
+    .button-container button {
+      display: block;
+      margin: 5px 0;
+      padding: 5px 10px;
+      color: white;
+      background-color: #333;
+      border: none;
+      cursor: pointer;
+    }
+    .button-container button:hover {
+      background-color: #555;
+    }
   </style>
 </head>
 <body>
-  <div id="map"></div>
+<div id="map"></div>
+<audio id="tornadoSound" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg" preload="auto"></audio>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/leaflet-timedimension/dist/leaflet.timedimension.min.js"></script>
-
-  <script>
-    // Create map with time slider and dark mode
-    const map = L.map("map", {
-      center: [39.5, -98.35], // Center USA
-      zoom: 5,
-      timeDimension: true,
-      timeDimensionControl: true,
-      timeDimensionOptions: {
-        timeInterval: "PT3H/PT0H",
-        period: "PT5M"
-      }
-    });
-
-    // Dark mode basemap (CartoDB)
-    L.tileLayer("https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png", {
-      attribution: '&copy; <a href="https://carto.com/">CartoDB</a>',
-      subdomains: "abcd",
-      maxZoom: 19
-    }).addTo(map);
-
-    // Radar Reflectivity Layer (Iowa State N0Q)
-    const radarLayer = L.tileLayer("https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/ridge::N0Q::USCOMP/{z}/{x}/{y}.png", {
-      attribution: "Iowa State Mesonet",
-      transparent: true
-    }).addTo(map);
-
-    // Load NWS Warnings
-    async function loadWarnings() {
-      try {
-        const res = await fetch("https://api.weather.gov/alerts/active");
-        const data = await res.json();
-
-        const warningsLayer = L.geoJSON(data, {
-          style: (feature) => {
-            const type = feature.properties.event;
-            let color = "#FF0000";
-            if (type.includes("Tornado")) color = "#FF0000";
-            else if (type.includes("Severe Thunderstorm")) color = "#FFA500";
-            else if (type.includes("Flash Flood")) color = "#008000";
-            else if (type.includes("Flood")) color = "#00FF00";
-            else if (type.includes("Winter Storm")) color = "#1E90FF";
-            else if (type.includes("Hurricane")) color = "#800000";
-            else if (type.includes("Marine")) color = "#9370DB";
-
-            return {
-              color: color,
-              weight: 2,
-              fillOpacity: 0.3
-            };
-          },
-          onEachFeature: (feature, layer) => {
-            layer.bindPopup(`<strong>${feature.properties.event}</strong><br>${feature.properties.headline}`);
-          }
-        });
-
-        warningsLayer.addTo(map);
-
-        // Store for refresh
-        map._warningsLayer = warningsLayer;
-      } catch (e) {
-        console.error("Failed to load warnings", e);
-      }
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet-timedimension/dist/leaflet.timedimension.min.js"></script>
+<script>
+  const map = L.map("map", {
+    center: [39.5, -98.35],
+    zoom: 5,
+    timeDimension: true,
+    timeDimensionControl: true,
+    timeDimensionOptions: {
+      timeInterval: "PT3H/PT0H",
+      period: "PT5M"
     }
+  });
 
-    // Initial load
+  // Dark mode map
+  L.tileLayer("https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png", {
+    attribution: '&copy; <a href="https://carto.com/">CartoDB</a>',
+    subdomains: "abcd",
+    maxZoom: 19
+  }).addTo(map);
+
+  // Radar Layer from IEM (working URL for USA radar)
+  const radar = L.tileLayer.wms("https://mesonet.agron.iastate.edu/cgi-bin/wms/nexrad/n0r-t.cgi", {
+    layers: "nexrad-n0r-wmst",
+    format: "image/png",
+    transparent: true,
+    attribution: "IEM Nexrad"
+  }).addTo(map);
+
+  // Toggle buttons for radar
+  const buttonControl = L.control({ position: 'topright' });
+  buttonControl.onAdd = function () {
+    const div = L.DomUtil.create('div', 'button-container');
+    div.innerHTML = `
+      <button onclick="toggleRadar()">Toggle Radar</button>
+      <button onclick="toggleWarnings()">Toggle Warnings</button>
+    `;
+    return div;
+  };
+  buttonControl.addTo(map);
+
+  let radarVisible = true;
+  function toggleRadar() {
+    if (radarVisible) {
+      map.removeLayer(radar);
+    } else {
+      radar.addTo(map);
+    }
+    radarVisible = !radarVisible;
+  }
+
+  let warningsLayer;
+
+  async function loadWarnings() {
+    try {
+      const res = await fetch("https://api.weather.gov/alerts/active");
+      const data = await res.json();
+      let hasTornado = false;
+
+      if (warningsLayer) map.removeLayer(warningsLayer);
+
+      warningsLayer = L.geoJSON(data, {
+        style: (feature) => {
+          const type = feature.properties.event;
+          let color = "#FF0000"; // Default red
+
+          if (type.includes("Severe Thunderstorm")) color = "#FFA500";
+          else if (type.includes("Flash Flood")) color = "#008000";
+          else if (type.includes("Flood")) color = "#00FF00";
+          else if (type.includes("Winter Storm")) color = "#1E90FF";
+          else if (type.includes("Hurricane")) color = "#800000";
+          else if (type.includes("Marine")) color = "#9370DB";
+          else if (type.includes("Special Weather Statement")) color = "#3399FF";
+          else if (type.includes("Tornado")) {
+            color = "#FF0000";
+            hasTornado = true;
+          }
+
+          return {
+            color: color,
+            weight: 2,
+            fillOpacity: 0.3
+          };
+        },
+        onEachFeature: (feature, layer) => {
+          layer.bindPopup(`<strong>${feature.properties.event}</strong><br>${feature.properties.headline}`);
+        }
+      });
+
+      warningsLayer.addTo(map);
+      if (hasTornado) document.getElementById("tornadoSound").play();
+
+    } catch (err) {
+      console.error("Warning fetch error:", err);
+    }
+  }
+
+  function toggleWarnings() {
+    if (map.hasLayer(warningsLayer)) {
+      map.removeLayer(warningsLayer);
+    } else {
+      warningsLayer.addTo(map);
+    }
+  }
+
+  loadWarnings();
+  setInterval(() => {
+    radar.setParams({ _: new Date().getTime() });
     loadWarnings();
-
-    // Auto-refresh every 5 minutes
-    setInterval(() => {
-      radarLayer.setUrl("https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/ridge::N0Q::USCOMP/{z}/{x}/{y}.png?" + new Date().getTime());
-
-      if (map._warningsLayer) {
-        map.removeLayer(map._warningsLayer);
-      }
-      loadWarnings();
-    }, 5 * 60 * 1000);
-  </script>
+  }, 300000); // Refresh every 5 mins
+</script>
 </body>
 </html>
 
