--- a/index.html
+++ b/index.html
@@ -1,111 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>StormTracker 13 - TrackingNQSevereWeather Real Time Radar</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>StormTracker 13 TrackingNQSevereWeather Real Time Radar</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    body, html {
-      margin: 0;
+    html, body, #map {
       height: 100%;
-      background-color: #111;
-      color: white;
-    }
-    #map {
-      width: 100%;
-      height: 100vh;
-    }
-    .leaflet-control-layers-expanded {
-      background-color: #333 !important;
-      color: white !important;
+      margin: 0;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
-  <audio id="tornadoSound" src="https://www.soundjay.com/transportation/sounds/siren-01a.mp3" preload="auto"></audio>
 
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/leaflet-timedimension@1.1.0/dist/leaflet.timedimension.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
   <script>
-    const map = L.map('map', {
-      center: [39.8283, -98.5795],
-      zoom: 5,
-      zoomControl: true,
-      timeDimension: true,
-      timeDimensionControl: true,
-      timeDimensionOptions: {
-        timeInterval: "PT6H/PT0H",
-        period: "PT5M"
-      },
-      timeDimensionControlOptions: {
-        autoPlay: false,
-        timeSliderDragUpdate: true,
-        loopButton: true,
-        minSpeed: 1,
-        maxSpeed: 15,
-        speedStep: 1,
-        timeZones: ["Local"]
-      }
+    const map = L.map('map').setView([39.5, -98.35], 5); // Center on USA
+
+    // Base map
+    const base = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 18,
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+
+    // Reflectivity Radar (Iowa State)
+    const radar = L.tileLayer('https://mesonet.agron.iastate.edu/cache/tile.py/1.0.0/nexrad-n0q-900913/{z}/{x}/{y}.png', {
+      opacity: 0.6,
+      attribution: 'Radar © Iowa State Univ. IEM'
+    }).addTo(map);
+
+    // ⚡️ Lightning overlay (optional — demo only, no live data)
+    const lightning = L.circle([38, -97], {
+      radius: 50000,
+      color: 'yellow',
+      fillColor: 'yellow',
+      fillOpacity: 0.7
+    }).bindPopup("⚡️ Lightning Strike Example");
+
+    // 🛰 Satellite (GOES — demo, static)
+    const satellite = L.tileLayer('https://services.arcgisonline.com/arcgis/rest/services/World_Imagery/MapServer/tile/{z}/{x}/{y}', {
+      attribution: "Esri World Imagery"
     });
 
-    const darkBase = L.tileLayer("https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png", {
-      attribution: '&copy; <a href="https://carto.com/">CARTO</a>',
-      subdomains: "abcd",
-      maxZoom: 19
-    }).addTo(map);
-
-    const radarLayer = L.tileLayer.wms("https://mesonet.agron.iastate.edu/cgi-bin/wms/nexrad/n0r-t.cgi", {
-      layers: 'nexrad-n0r-wmst',
-      format: 'image/png',
-      transparent: true,
-      attribution: "Radar from Iowa State University"
-    });
-
-    const radarTimeLayer = L.timeDimension.layer.wms(radarLayer, {
-      updateTimeDimension: true,
-      requestTimeFromCapabilities: true,
-      wmsVersion: '1.1.1'
-    }).addTo(map);
-
-    const warningsLayer = L.tileLayer.wms("https://mesonet.agron.iastate.edu/cgi-bin/wms/us/wwa.cgi", {
-      layers: 'warnings_c',
-      format: 'image/png',
-      transparent: true,
-      attribution: "IEM Warning Layer"
-    }).addTo(map);
-
-    const baseLayers = {
-      "Dark Mode": darkBase
-    };
-
-    const overlayLayers = {
-      "Radar Reflectivity": radarTimeLayer,
-      "Weather Warnings": warningsLayer
-    };
-
-    L.control.layers(baseLayers, overlayLayers).addTo(map);
-
-    // Auto-refresh radar every 5 minutes
-    setInterval(() => {
-      radarTimeLayer._timeDimension.setCurrentTime(Date.now());
-    }, 300000);
-
-    // Tornado alert sound
-    function checkTornadoAlerts() {
-      $.get("https://mesonet.agron.iastate.edu/cgi-bin/geoserver/nws/watch_warn_warns.geojson", function (data) {
-        let tornadoWarning = data.features.some(feature => feature.properties.phenomena === "TO" && feature.properties.sig === "W");
-        if (tornadoWarning) {
-          document.getElementById("tornadoSound").play();
-        }
+    // 🌪 NWS Alerts (USA)
+    fetch('https://api.weather.gov/alerts/active')
+      .then(response => response.json())
+      .then(data => {
+        data.features.forEach(alert => {
+          const coords = alert.geometry?.coordinates;
+          if (coords) {
+            const poly = L.polygon(coords[0].map(pair => [pair[1], pair[0]]), {
+              color: getAlertColor(alert.properties.event),
+              fillOpacity: 0.4
+            }).bindPopup(`<b>${alert.properties.event}</b><br>${alert.properties.headline}`);
+            poly.addTo(map);
+          }
+        });
       });
+
+    function getAlertColor(event) {
+      const e = event.toLowerCase();
+      if (e.includes("tornado")) return "red";
+      if (e.includes("thunderstorm")) return "blue";
+      if (e.includes("flood")) return "green";
+      if (e.includes("fire")) return "darkred";
+      if (e.includes("wind")) return "purple";
+      return "orange";
     }
 
-    setInterval(checkTornadoAlerts, 60000); // Check every minute
+    // Add optional overlays
+    const overlays = {
+      "Reflectivity Radar": radar,
+      "Satellite (Static)": satellite,
+      "Lightning (Example)": lightning
+    };
+    L.control.layers(null, overlays).addTo(map);
   </script>
 </body>
 </html>
-
